Bug 445940 - Random rectangular regions of the window are filled with blinking garbage
Summary: Random rectangular regions of the window are filled with blinking garbage
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.08.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-22 19:08 UTC by php4fan
Modified: 2024-01-31 17:43 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description php4fan 2021-11-22 19:08:17 UTC
SUMMARY

STEPS TO REPRODUCE
1.  use Kate

OBSERVED RESULT

At random times, some random rectangular portions of Kate's window (which may randomly cover both the text and/or the UI), usually not very big (like in the order of a few dozens pixels in width and height), are filled with garbage, usually some horizontal or vertical gradient from white to gray, resembling a very small piece of a window's border's shadow insanely up-scaled (I'm not saying that's what it is, I'm just describing what it looks like). And it "blinks", alternating between two or few different "frames".

These won't go away by passing the mouse cursor over them, but they do go away by moving Kate's window, switching back and forth between tabs, or giving focus to another application and then back to Kate.



Operating System: openSUSE Tumbleweed 20211027
KDE Plasma Version: 5.23.1
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2
Kernel Version: 5.14.14-1-default (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-1065G7 CPU @ 1.30GHz
Memory: 7.3 GiB of RAM
Graphics Processor: Mesa Intel® Iris® Plus Graphics
Comment 1 Waqar Ahmed 2021-11-22 19:12:46 UTC
Can confirm this happens. For me I have never found a specific reason or thing that triggers this, and the artifacts usually disappear within a couple of seconds automatically.

This is probably not a bug in Kate though I think but don't know whose bug it is so not reassigning
Comment 2 Christoph Cullmann 2022-06-16 15:32:10 UTC
I never got this.
I would assume this is some error more down the stack, either X/Wayland/graphics driver.
Therefore I don't see that we can fix this.
Comment 3 php4fan 2022-06-16 15:38:17 UTC
And yet Kate is the ONLY application in which I've ever observed anything similar.
Comment 4 php4fan 2023-01-03 17:51:27 UTC
I've realized this issue is most probably caused by the little windows that pop up as you type to suggest autocompletion of words, and their animations which are almost always broken (even when they don't result in garbage that keeps floating around once the popups are gone).

So maybe this belongs somewhere else in KDE.
Comment 5 Waqar Ahmed 2023-01-03 18:35:12 UTC
Since the last plasma update, this is happening 100x more and leads to a really bad experience while typing in Kate (X11 not wayland). I have no idea who this should get reported to
Comment 6 php4fan 2023-04-04 21:35:48 UTC Comment hidden (spam)
Comment 7 Bug Janitor Service 2023-11-19 16:57:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/638
Comment 8 Christoph Cullmann 2023-11-20 17:37:29 UTC
Git commit e545a6254f3a3e3084e8a9a37381983c463a8136 by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 20/11/2023 at 18:25.
Pushed by waqar into branch 'master'.

Make completion a normal widget that is floating

Right now completion is a window which results in various issues with
wayland vs X. Making it a widget simplifies our code a lot as we
don't need to think about the window manager at all or do manual
position tracking.

The widget is parented to the "window", for kate this means
KateMainWindow and for other apps it will be the top level window in
which the view lives. The reason it is parented to the window is
because we still want to be able to use the entire space available to
the mainWindow. This can be important if you are using splits as the
view width will be much smaller.

This also fixes the blinking crap/dirty regions that results from
completion widget.

M  +8    -29   src/completion/documentation_tip.cpp
M  +1    -1    src/completion/documentation_tip.h
M  +0    -1    src/completion/kateargumenthinttree.cpp
M  +2    -2    src/completion/katecompletiontree.cpp
M  +42   -58   src/completion/katecompletionwidget.cpp
M  +1    -3    src/completion/katecompletionwidget.h
M  +2    -0    src/view/kateview.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/e545a6254f3a3e3084e8a9a37381983c463a8136
Comment 9 php4fan 2024-01-31 11:44:17 UTC
What version is this supposed to be fixed in?
Comment 10 Nate Graham 2024-01-31 17:43:53 UTC
The "Version Fixed In" field tells you that.